# amt-exa-PEER-api/src/main/java/ch/heig/amt/exa/PEER/api/exceptions/ProduitNotFoundException.java
@@ -1,0 +1,8 @@
+package ch.heig.amt.exa.PEER.api.exceptions;
+
+public class ProduitNotFoundException extends RuntimeException {
+    public ProduitNotFoundException(Integer id) {
+        super("Produit " + id + " non trouvé");
+    }
+
+}
